deploy/k8s/base/internal-rpc-authority/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-rpc-authority-database-credential-reconciler
  labels:
    app.kubernetes.io/name: internal-rpc-authority
    app.kubernetes.io/component: database-credential-reconciler
spec:
  selector:
    app.kubernetes.io/name: internal-rpc-authority
    app.kubernetes.io/component: database-credential-reconciler
  ports:
    - name: grpc-mtls
      port: 8443
      targetPort: grpc-mtls
    - name: metrics
      port: 9090
      targetPort: technical
